Fix search button not working on mobile bug

--- a/src/code/styles.css
+++ b/src/code/styles.css
@@ -257,6 +257,8 @@ iframe{
 }
 
 .enter-date-text{
+    text-align: center;
+    margin-bottom: 15px;
     font-size: 20px;
 }
 
